fix solution form buttons overflowing on Firefox, side scroll on mobile messaging.

--- a/src/app/concentration/components/solution-entry/solution-entry.component.scss
+++ b/src/app/concentration/components/solution-entry/solution-entry.component.scss
@@ -27,6 +27,9 @@ button{
   background: #e8e8e8;
   background: linear-gradient(to bottom, #e0e0e0, #e8e8e8, #dfdfdf);
 }
+#solution {
+  width:350px;
+}
 
 .solution-container {
   display: flex;
@@ -47,6 +50,11 @@ button{
   .solution-container {
     flex-direction: column;
     align-items: flex-end;
+  }
+
+  #solution {
+    width:calc(100% - 30px);
+    margin-bottom: 10px;
   }
 
   #solutionForm {
