--- a/src/app/concentration/concentration/concentration.component.scss
+++ b/src/app/concentration/concentration/concentration.component.scss
@@ -139,6 +139,7 @@ button {
   #message,
   #explanation {
     width: 320px;
+    max-width: calc(100% - 30px);
     font-size: .9em;
   }
 
